--- a/resources/sass/layouts/_invoice.scss
+++ b/resources/sass/layouts/_invoice.scss
@@ -49,7 +49,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    
     .invoice-actions {
         order: 1;
     }
@@ -61,5 +63,11 @@
 
 .invoice-actions {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+
+    #converterBtn {
+        margin-bottom: 1rem;
+        margin-right: 0;
+    }
 }
