--- a/resources/sass/layouts/_language-switcher.scss
+++ b/resources/sass/layouts/_language-switcher.scss
@@ -1,4 +1,8 @@
 .language-switcher {
     margin-top: 1rem;
     text-align: center;
+
+    .ui.selection.dropdown {
+        min-width: 100%;
+    }
 }
