--- a/resources/sass/layouts/mq/sm/_language-switcher.scss
+++ b/resources/sass/layouts/mq/sm/_language-switcher.scss
@@ -2,5 +2,9 @@
     .language-switcher {
         margin-top: 0;
         text-align: left;
+
+        .ui.selection.dropdown {
+            min-width: 14em;
+        }
     }
 }
